--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   },
   "dependencies": {
     "firebase": "^7.15.5",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "nuxt-i18n": "^6.15.4",
+    "nuxt-validate": "^1.0.1"
   },
   "devDependencies": {
     "@firebase/testing": "^0.20.5",
     "@nuxtjs/tailwindcss": "^1.0.0",
+    "@nuxtjs/vuetify": "^1.11.2",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
     "filesystem": "^1.0.1",
